# MLOps_proj

./: README.md  pyproject.toml
.dvc/: config
MLOps_proj/: .gitignore  CifarCNN.ckpt.dvc  dataclass.py  infer.py  mlflow_run.py  model.onnx.dvc  models.py  train.py
conf/: config.yaml
